--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 .hero-image {
-    background-image: url(assets/images/hero-image.jpg);
+    background-image: url(../images/hero-image.jpg);
     background-size: cover;
     background-attachment: fixed;
     background-repeat: no-repeat;
