--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,4 +3,15 @@
     background-size: cover;
     background-attachment: fixed;
     background-repeat: no-repeat;
+    height: 55rex;
+    text-align: center;
+}
+
+.navbar-brand {
+    color: grey;
+}
+
+.navbar-brand > img {
+    width: 6%;
+    height: 6%;
 }
