--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,4 +4,14 @@
     background-attachment: fixed;
     background-repeat: no-repeat;
     height: 55rex;
+    text-align: center;
+}
+
+.navbar-brand {
+    color: grey;
+}
+
+.navbar-brand > img {
+    width: 6%;
+    height: 6%;
 }
