--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,15 +3,27 @@ body {
     background-size: cover;
     background-attachment: fixed;
     background-repeat: no-repeat;
-    background-color: rgba(255, 255, 255, 0.8); /* White background with 80% opacity */
+    background-color: rgba(255, 255, 255, 0.5); /* White background with 80% opacity */
     background-blend-mode: lighten; /* Blend the background image with the white color */
 }
 
-.navbar-brand {
-    color: grey;
+.card {
+    background-color: rgba(255, 255, 255, 0.8); /* Make the card background transparent */
+    border: 2px solid gold; /* Add a yellow border around the cards */
 }
 
-.navbar-brand > img {
-    width: 6%;
-    height: 6%;
+
+#page-title {
+    color: gold;
+    text-shadow: 2px -2px 2px grey;
+    font-size: 3.5rem;
+}
+
+#search-button:hover {
+    background-color: gold;
+    color: black;
+}
+
+#search-button {
+   border: none;
 }
