--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,9 +30,7 @@ body {
 
 /* Media query for laptop with screen size 768x1024px */
 @media (min-width: 768px) and (max-width: 1024px) {
-    footer {
-        position: relative;
-        bottom: 0;
-        width: 100%;
+     #forecast-section {
+        margin-bottom: 50px; /* Adjust this value as needed */
     }
 }
